--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,6 +8,8 @@
 	    "default_popup": "popup.html"
     },
     "permissions": [
-	    "tabs"
+	    "tabs",
+	    "webRequest",
+	    "http://localhost/"
     ]
 }
